load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "20112_sator_mabangjin_test",
    srcs = ["20112_sator_mabangjin_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//20000/src:20112_sator_mabangjin",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "20299_three_measurements_test",
    srcs = ["20299_three_measurements_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//20000/src:20299_three_measurements",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "20494_sushi_test",
    srcs = ["20494_sushi_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//20000/src:20494_sushi",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "20976_the_second_largest_integer_test",
    srcs = ["20976_the_second_largest_integer_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//20000/src:20976_the_second_largest_integer",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "20977_joi_sort_test",
    srcs = ["20977_joi_sort_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//20000/src:20977_joi_sort",
        "@googletest//:gtest_main",
    ],
)
