load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "21200_forced_choice",
    hdrs = ["21200_forced_choice.h"],
    visibility = ["//21000/tests:__pkg__"],
)

cc_library(
    name = "21598_scicomlove",
    hdrs = ["21598_scicomlove.h"],
    visibility = ["//21000/tests:__pkg__"],
)

cc_library(
    name = "21603_k_2k_game",
    hdrs = ["21603_k_2k_game.h"],
    visibility = ["//21000/tests:__pkg__"],
)

cc_library(
    name = "21955_split",
    hdrs = ["21955_split.h"],
    visibility = ["//21000/tests:__pkg__"],
)

cc_library(
    name = "21964_school_song",
    hdrs = ["21964_school_song.h"],
    visibility = ["//21000/tests:__pkg__"],
)
