cc_test(
    name = "21200_forced_choice_test",
    srcs = ["21200_forced_choice_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//21000/src:21200_forced_choice",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "21955_split_test",
    srcs = ["21955_split_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//21000/src:21955_split",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "21964_school_song_test",
    srcs = ["21964_school_song_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//21000/src:21964_school_song",
        "@googletest//:gtest_main",
    ],
)
