load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "22113_cy_and_bus_test",
    srcs = ["22113_cy_and_bus_test.cc"],
    deps = [
        "//22000/src:22113_cy_and_bus",
        "//test_headers:test_helper",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "22938_good_shooter_test",
    srcs = ["22938_good_shooter_test.cc"],
    deps = [
        "//22000/src:22938_good_shooter",
        "//test_headers:test_helper",
        "@googletest//:gtest_main",
    ],
)
