load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "23037_only_5",
    hdrs = ["23037_only_5.h"],
    visibility = ["//23000/tests:__pkg__"],
)

cc_library(
    name = "23048_coloring_natural_numbers",
    hdrs = ["23048_coloring_natural_numbers.h"],
    visibility = ["//23000/tests:__pkg__"],
)

cc_library(
    name = "23080_scytale_cipher",
    hdrs = ["23080_scytale_cipher.h"],
    visibility = ["//23000/tests:__pkg__"],
)

cc_library(
    name = "23303_this_problem_is_d2",
    hdrs = ["23303_this_problem_is_d2.h"],
    visibility = ["//23000/tests:__pkg__"],
)

cc_library(
    name = "23627_driip",
    hdrs = ["23627_driip.h"],
    visibility = ["//23000/tests:__pkg__"],
)

cc_library(
    name = "23738_pectopah",
    hdrs = ["23738_pectopah.h"],
    visibility = ["//23000/tests:__pkg__"],
)

cc_library(
    name = "23795_gambling_should_be_fun",
    hdrs = ["23795_gambling_should_be_fun.h"],
    visibility = ["//23000/tests:__pkg__"],
)

cc_library(
    name = "23805_print_at",
    hdrs = ["23805_print_at.h"],
    visibility = ["//23000/tests:__pkg__"],
)

cc_library(
    name = "23810_overturned",
    hdrs = ["23810_overturned.h"],
    visibility = ["//23000/tests:__pkg__"],
)

cc_library(
    name = "23825_lets_make_sasa",
    hdrs = ["23825_lets_make_sasa.h"],
    visibility = ["//23000/tests:__pkg__"],
)

cc_library(
    name = "23885_bishop_tour",
    hdrs = ["23885_bishop_tour.h"],
    visibility = ["//23000/tests:__pkg__"],
)

cc_library(
    name = "23971_zoac_4",
    hdrs = ["23971_zoac_4.h"],
    visibility = ["//23000/tests:__pkg__"],
)
